[gd_scene load_steps=3 format=3 uid="uid://csf8t7vv8e0r5"]

[ext_resource type="Script" path="res://scripts/ui/CardDisplay.gd" id="1_mxk8v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.1, 0.3)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.6, 0.2, 0.8)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CardDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 250.0
script = ExtResource("1_mxk8v")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="CardFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="CardArt" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -45.0
expand_mode = 1
stretch_mode = 6

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -35.0
offset_right = 85.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Nome da Carta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeIcon" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 16
text = "⚔️"
horizontal_alignment = 1
vertical_alignment = 1